# TAFC

./: Ejercicios
Ej1/B1/src/: #DetectorConstruction.cc#  DetectorConstruction.cc  DetectorConstruction.cc~
Ej1/Buil/: CMakeCache.txt  G4History.macro  Makefile  cmake_install.cmake  exampleB1  vis.mac
Ej1/Buil/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
Ej2/Ejercicio2/: CMakeLists.txt  Ej2.cc  Ej2.cc~
Ej2/Ejercicio2/include/: PrimaryGeneratorAction.hh~
Ej2/Ejercicio2/macros/: init.mac
Ej2/Ejercicio2/src/: ActionInitialization.cc~  DetectorConstruction.cc~  PhysicsList.cc  PhysicsList.cc~  PrimaryGeneratorAction.cc  PrimaryGeneratorAction.cc~  SteppingAction.cc~
Ej3/Ejercicio3/: #Ej3.cc#  Ej3.cc  Ej3.cc~  run.mac
Ej3/Ejercicio3/include/: ActionInitialization.hh  ActionInitialization.hh~  PrimaryGeneratorAction.hh~
Ej3/Ejercicio3/macros/: run.mac  tracking.mac
Ej3/Ejercicio3/src/: ActionInitialization.cc  DetectorConstruction.cc  PrimaryGeneratorAction.cc  SteppingAction.cc
Ej4/Ejercicio4/: CMakeLists.txt  Ej4.cc
Ej4/Ejercicio4/include/: #SteppingAction.hh#  ActionInitialization.hh  DetectorConstruction.hh  PhysicsList.hh  PhysicsList.hh~  PrimaryGeneratorAction.hh  RunAction.hh  RunAction.hh~  SecondaryInfo.hh  SecondaryInfo.hh~  StackingAction.hh  SteppingAction.hh  SteppingAction.hh~
Ej4/Ejercicio4/macros/: init.mac
Ej4/Ejercicio4/src/: ActionInitialization.cc  ActionInitialization.cc~  DetectorConstruction.cc  DetectorConstruction.cc~  PhysicsList.cc  PrimaryGeneratorAction.cc~  SteppingAction.cc
